Update url and baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ name: David Moon
 email: dmoon1221@gmail.com
 position: PhD student
 place: CU Boulder
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "dmoon" # the subpath of your site, e.g. /blog
+url: "https://plv.colorado.edu" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: dmoon1221
 github_username:  dmoon1221
 
