--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ theme: jekyll-theme-minimal
 face: assets/img/face.jpg
 plugins:
   - jekyll-feed
+sass:
+  style: compressed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
