--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ baseurl: /dmoon # the subpath of your site, e.g. /blog
 url: https://plv.colorado.edu # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: dmoon1221
 github_username:  dmoon1221
+google_analytics: UA-127130253-1
 
 # Build settings
 markdown: kramdown
