--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: David Moon
 name: David Moon
-email: dmoon1221@gmail.com
+email: dmoo@umich.edu
 google_analytics: UA-127130253-1
 
 # Build settings
